Quiz Window angepasst. Buttons funktionieren auch, Antwort und Frage haben self size bekommen. Rating ist aber halt noch völliger quatsch,aber das ist Aufgabe von DausB.

--- a/Sem4/Quiz/frontend/my.kv
+++ b/Sem4/Quiz/frontend/my.kv
@@ -195,42 +195,64 @@ ScreenManager:
             source: "logoo.png"
             pos_hint: {"center_x": 0.5, "center_y": 0.85}
             size_hint:( 0.2,0.2)
+        
         Label:
             id: frageTitel_label
             text: "FrageTitel"
             font_name: "Impact"
-            pos_hint: {"center_x": 0.5, "center_y": 0.65}
+            pos_hint: {"center_x": 0.5, "center_y": 0.69}
             font_size: 28
+            halign: "center"
+            valign: "middle"
+            text_size: self.size       
         Label:
             id: frage_label
             text: "Frage"
             font_name: "Impact"
-            pos_hint: {"center_x": 0.5, "center_y": 0.47} 
-            font_size: 28  
+            pos_hint: {"center_x": 0.5, "center_y": 0.53} 
+            font_size: 28 
+            halign: "center"
+            valign: "middle"
+            text_size: self.size 
+        
         TextInput:
             id: Quiz_antwort_input
             hint_text: "Antwort eingeben"
-            pos_hint: {'center_x': 0.5, 'y': 0.2}
+            pos_hint: {'center_x': 0.5, 'y': 0.1}
             size_hint: 0.25, 0.1
         Button:
-            pos_hint: {"center_x": 0.1, "center_y": 0.1}
+            pos_hint: {"center_x": 0.1, "center_y": 0.05}
             size_hint:(0.1,0.05)
             on_release: 
                 app.root.current = "main"
                 root.manager.transition.direction = "right"
         Button:
             id: next_question
-            pos_hint: {"center_x": 0.5, "center_y": 0.1}
+            text: "next question"
+            pos_hint: {"center_x": 0.5, "center_y": 0.05}
             size_hint:(0.1,0.05)
             on_release: 
                 root.next_question(self)
+        Button:
+            id: reveal_answer
+            text: "rate answer"
+            pos_hint: {"center_x": 0.8, "center_y": 0.05}
+            size_hint:(0.1,0.05)
+            on_release: 
+                root.reveal_answer(self)
+            
         Label:
+            text: "Erreichte Punktzahl:"
             id: points_label
             font_name: "Impact"
-            pos_hint: {"center_x": 0.8, "center_y": 0.47} 
+            pos_hint: {"center_x": 0.2, "center_y": 0.77} 
             font_size: 28  
         Label:
+            text: "hier könnte ihre werbung stehen"
             id: perfect_answer_label
             font_name: "Impact"
-            pos_hint: {"center_x": 0.8, "center_y": 0.47} 
-            font_size: 28  
+            pos_hint: {"center_x": 0.5, "center_y": 0.33} 
+            font_size: 28 
+            halign: "center"
+            valign: "middle"
+            text_size: self.size 
