Loginwindow angefangen zu verschönern. Das soll so wie bei League of Legends mäßig aussehen

--- a/Sem4/Quiz/frontend/my.kv
+++ b/Sem4/Quiz/frontend/my.kv
@@ -65,48 +65,83 @@ ScreenManager:
 
 <LoginWindow>:
     name: "login"
-    canvas.before:
-        Color:
-            rgba: 5/255,0/255,25/255,1
-        Rectangle:
-            size: self.size
-            pos: self.pos
-
     FloatLayout:
+        canvas.before:
+            Color:
+                rgba: 5/255,0/255,25/255,1
+            Rectangle:
+                size: self.size
+                pos: self.pos
+
+        FloatLayout:
+            pos_hint: {'x': 0, 'y': 0}
+            size_hint: 0.35, 1
+            canvas.before:
+                Color:
+                    rgba: (247/255, 247/255 , 247/255, 1)
+                Rectangle:
+                    size: self.size
+                    pos: self.pos
+
+            Label:
+                text: "Sign In"
+                font_name: "Impact"
+                color: (0, 0, 0, 1)
+                font_size: 20
+                size_hint: None, None
+                size: self.texture_size
+                pos_hint: {"center_x": 0.5, "y": 0.73}
+
+            TextInput:
+                id: username
+                hint_text: "Username"
+                size_hint: 0.8, None
+                height: 40
+                pos_hint: {'center_x': 0.5, 'center_y': 0.67}
+
+            TextInput:
+                id: password
+                hint_text: "Password"
+                size_hint: 0.8, None
+                height: 40
+                pos_hint: {'center_x': 0.5, 'center_y': 0.57}
+
+            Button:
+                id: signupButton
+                text: "Sign Up"
+                size_hint: 0.5, None
+                height: 40
+                pos_hint: {'center_x': 0.5, 'center_y': 0.1}
+                on_release: app.show_register_popup()
+
+            Button: 
+                text: "Log In"
+                size_hint: 0.5, None
+                height: 40
+                pos_hint: {'center_x': 0.5, 'center_y': 0.33}
+                background_color: 0,0,0,0
+                on_release: 
+                    root.login()
+                    app.root.current = "main"
+                    root.manager.transition.direction = "left"
+                Image: 
+                    source: "arrow-right.png"
+                    center_x: self.parent.center_x
+                    center_y: self.parent.center_y
+                    size: 85,100
+
+
+
         Image:
             source: "zicke.jpg"
-            pos_hint: {"center_x": 0.5, "center_y": 0.75}
-            size_hint:( 0.45,0.45)
+            pos_hint: {"center_x": 0.7, "center_y": 0.6}
+            size_hint: (0.45, 0.45)
+
         Label:
             id: slogan_msg
             text: "Quizy – Intelligente Unterhaltung."
             font_name: "Impact"
-            pos_hint: {"center_x": 0.5, "center_y": 0.52}  
-        TextInput:
-            id: username
-            hint_text: "Enter Username"
-            pos_hint: {'center_x': 0.5, 'y': 0.35}
-            size_hint: 0.25, 0.1
-        
-        TextInput:
-            id: password
-            hint_text: "Enter Password"
-            pos_hint: {'center_x': 0.5, 'y': 0.2}
-            size_hint: 0.25, 0.1
-        Button:
-            id: signupButton
-            text: "Sign Up"
-            pos_hint: {"center_x": 1, "center_y": 0.5}
-            size_hint:(0.2,0.1)
-            on_release: app.show_register_popup()
-        Button: 
-            pos_hint:{"center_x": 0.5 , "center_y": 0.1}
-            size_hint:(0.1,0.05)
-            on_release: 
-                root.login()
-                app.root.current = "main"
-                root.manager.transition.direction = "left"
-
+            pos_hint: {"center_x": 0.7, "center_y": 0.35}
 <PopupRegister>:
     title: "Register"
     size_hint: 0.75, 0.75
@@ -114,12 +149,7 @@ ScreenManager:
     BoxLayout:
         orientation: 'vertical'
         padding: 10
-        spacing: 10
-        Label:
-            id: message
-            text: "Test"
-            font_name: "Impact"
-            pos_hint: {"center_x": 0.5, "center_y": 0.52}  
+        spacing: 10  
         TextInput:
             id: username
             hint_text: "Enter Username"
@@ -153,7 +183,7 @@ ScreenManager:
             pos_hint: {"center_x": 0.5, "center_y": 0.75}
             size_hint:( 0.35,0.35)
         Button:
-            pos_hint: {"center_x": 0.5, "center_y": 0.7}
+            pos_hint: {"center_x": 0.5, "center_y": 0.95}
             size_hint:(0.1,0.05)
             on_release: 
                 app.root.current = "main"
@@ -209,7 +239,7 @@ ScreenManager:
             text: "FrageTitel"
             font_name: "Impact"
             pos_hint: {"center_x": 0.5, "center_y": 0.69}
-            font_size: 28
+            font_size: 0
             halign: "center"
             valign: "middle"
             text_size: self.size       
