--- a/Sem4/Quiz/frontend/my.kv
+++ b/Sem4/Quiz/frontend/my.kv
@@ -116,8 +116,7 @@ ScreenManager:
 
             Button: 
                 text: "Log In"
-                size_hint: 0.5, None
-                height: 40
+                size_hint: 0.2, 0.1
                 pos_hint: {'center_x': 0.5, 'center_y': 0.33}
                 background_color: 0,0,0,0
                 on_release: 
