--- a/Sem4/Quiz/frontend/my.kv
+++ b/Sem4/Quiz/frontend/my.kv
@@ -152,6 +152,7 @@ ScreenManager:
         spacing: 15  # Increased spacing between elements
         
         Label:
+            id: message
             text: "Register"
             font_name: "Impact"
             font_size: 24
@@ -182,7 +183,6 @@ ScreenManager:
             pos_hint: {"center_x": 0.5}
             on_release: 
                 root.reg_user()
-                root.dismiss()
 
         Widget:
             size_hint_y: None
