--- a/Sem4/Quiz/frontend/my.kv
+++ b/Sem4/Quiz/frontend/my.kv
@@ -123,19 +123,16 @@ ScreenManager:
                     center_x: self.parent.center_x
                     center_y: self.parent.center_y
                     size: 70,70
-
-
-
         Image:
-            source: "zicke.jpg"
-            pos_hint: {"center_x": 0.7, "center_y": 0.6}
+            source: "logoo.png"
+            pos_hint: {"center_x": 0.67, "center_y": 0.6}
             size_hint: (0.45, 0.45)
 
         Label:
             id: slogan_msg
             text: "Quizy – Intelligente Unterhaltung."
             font_name: "Impact"
-            pos_hint: {"center_x": 0.7, "center_y": 0.35}
+            pos_hint: {"center_x": 0.67, "center_y": 0.35}
 <PopupRegister>:
     title: "Register"
     size_hint: 0.6, 0.5  # Adjusted size to make it shorter
