--- a/Sem4/Quiz/frontend/my.kv
+++ b/Sem4/Quiz/frontend/my.kv
@@ -279,7 +279,7 @@ ScreenManager:
             valign: "middle"
             text_size: self.size 
         Label:
-            text: "hier könnte ihre werbung stehen"
+            text: ""
             id: perfect_answer_label
             font_name: "Impact"
             pos_hint: {"center_x": 0.5, "center_y": 0.45} 
